fixed issue on mobile

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -54,7 +54,7 @@
     }
 
     .app__project h1{
-        font-size: 25px;
+        font-size: 20px;
     }
 
     .app__project-links button{
